[BI-685] fix feather icon alignment

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -464,9 +464,3 @@ div.sentence-input {
   fill: none;
   stroke-width: 2;
 }
-
-// Fix vie feather icons
-svg.feather {
-  vertical-align: middle;
-  margin-top: -4px;
-}
